--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #1a3a6e;
+    background-color: #2b61b9;
     /* Blue background */
     padding: 0.5rem 2rem;
     color: #fff;
