--- a/styles/index.css
+++ b/styles/index.css
@@ -150,7 +150,7 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   display: flex;
-  align-items: left;
+  align-items: center;
   justify-content: center;
   font-size: 18px;
   font-weight: bold;
