--- a/styles/index.css
+++ b/styles/index.css
@@ -150,8 +150,8 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   font-size: 18px;
   font-weight: bold;
   color: #333;
