--- a/styles/index.css
+++ b/styles/index.css
@@ -166,7 +166,7 @@
 
 .main-container {
   font-family: Arial, sans-serif;
-  background-color: #4e7ac7;
+  background-color: #1a3a6e;
   color: #fff;
   display: flex;
   justify-content: center;
