--- a/styles/index.css
+++ b/styles/index.css
@@ -167,7 +167,7 @@
 
 .main-container {
   font-family: Arial, sans-serif;
-  background-color: #121212;
+  background-color: #1a3a6e;
   color: #fff;
   display: flex;
   justify-content: center;
