--- a/styles/top-anime.css
+++ b/styles/top-anime.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #121212;
+    background-color: #1a3a6e;
     color: #dcdcdc;
 }
 
@@ -30,6 +30,7 @@ tr:nth-child(odd) {
 
 .rank {
     text-align: center;
+    vertical-align: middle;
     font-size: 24px;
     font-weight: bold;
 }
