--- a/styles/top-anime.css
+++ b/styles/top-anime.css
@@ -86,18 +86,18 @@ table tbody td {
 .button:hover {
     background-color: #5a5a5a;
 }
-
-.website_name {
-    background-color: #000000;
-    padding: 10px;
-    justify-content: center;
-  
-  }
-  
+  /* header */
   * {
     margin: 0px;
     padding: 0px;
   }
+
+  .website_name {
+      background-color: #000000;
+      padding: 10px;
+      justify-content: center;
+    
+    }
   
   .homehead {
     display: flex;
